src/style/costomClass.css
.common-wrapper {
  width: 100%;
  max-width: 75rem;
  margin: 0 1rem;
}

.page-class {
  display: flex;
  justify-content: center;
  width: 100%;
}

/* Class screen classes */

.class-item-wrap {
  height: 18rem;
  overflow: hidden;
  position: relative;
}

.class-item {
  width: 100%;
  height: 100%;
  background-size: cover;
  filter: grayscale(1);
  transform: scale(1.2);
  transition: all ease-in 0.4s;
}

.class-item-text {
  position: absolute;
  z-index: 10;
  color: #fff;
  bottom: 1.5rem;
  left: 1.5rem;
}

.class-item-side {
  display: flex;
  position: absolute;
  z-index: 10;
  background: hsla(0, 0%, 100%, 0.3);
  width: 8rem;
  top: 5.5rem;
  left: -3rem;
  justify-content: end;
  border-radius: 9999px;
  transform: rotate(30deg);
}

.button-class {
  align-self: flex-start;
  font-weight: 500;
  color: white;
  background-color: #4b5563;
  padding-left: 32px;
  padding-right: 32px;
  padding-top: 16px;
  padding-bottom: 16px;
  display: flex;
  align-items: center;
  gap: 8px;
  justify-content: center;
  width: fit-content;
  transition-duration: 0.5s;
}

.button-class:hover {
  background-color: #dc2626;
}

.button-class-light {
  align-self: flex-start;
  position: relative;
  font-weight: 500;
  color: black;
  background-color: white;
  padding-left: 32px;
  padding-right: 32px;
  padding-top: 16px;
  padding-bottom: 16px;
  display: flex;
  align-items: center;
  gap: 8px;
  justify-content: center;
  width: fit-content;
  transition-duration: 0.5s;
  z-index: 3;
}

.button-class-light::after {
  content: "";
  position: absolute;
  width: 100%; 
  height: 100%;
  bottom: .7rem; 
  left: .6rem;
  background-color: transparent;
  border: 2px solid #4b5563; 
  box-sizing: border-box;
  transition: all 0.3s ease;
  z-index: 2;
}

.button-class-light:hover::after {
  bottom: 0; 
  left: 0;
}

